force-app/main/default/objects/Lead/fields/Competitor_Using__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Using__c</fullName>
    <label>Competitor Using</label>
    <description>Current competitor solution they are using</description>
    <inlineHelpText>Name of competitor solution currently being used (e.g. Opta, StatsBomb)</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>