force-app/main/default/objects/Lead/fields/Creator_Type__c.field-meta.xml
<CustomField>
    <fullName>Creator_Type__c</fullName>
    <label>Creator Type</label>
    <description>Type of content creator</description>
    <inlineHelpText>Select the type of content creator</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Podcaster</fullName>
            </value>
            <value>
                <fullName>YouTuber</fullName>
            </value>
            <value>
                <fullName>Blogger</fullName>
            </value>
            <value>
                <fullName>Social Media Influencer</fullName>
            </value>
            <value>
                <fullName>Journalist</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Multi-Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>