force-app/main/default/objects/Lead/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <label>Decision Maker</label>
    <description>Indicates if this lead has budget authority</description>
    <inlineHelpText>Check if this lead has budget authority to make purchasing decisions</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>