force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <description>Type of revenue opportunity</description>
    <inlineHelpText>Type of revenue opportunity this lead represents</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription - Premium</fullName>
            </value>
            <value>
                <fullName>Subscription - Creator</fullName>
            </value>
            <value>
                <fullName>Sponsorship - Brand</fullName>
            </value>
            <value>
                <fullName>Sponsorship - League</fullName>
            </value>
            <value>
                <fullName>Media Licensing</fullName>
            </value>
            <value>
                <fullName>Team Portal - Bronze</fullName>
            </value>
            <value>
                <fullName>Team Portal - Silver</fullName>
            </value>
            <value>
                <fullName>Team Portal - Gold</fullName>
            </value>
            <value>
                <fullName>API Access</fullName>
            </value>
            <value>
                <fullName>Affiliate Partner</fullName>
            </value>
            <value>
                <fullName>Strategic Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>