force-app/main/default/objects/Lead/fields/League_Name__c.field-meta.xml
<CustomField>
    <fullName>League_Name__c</fullName>
    <label>League Name</label>
    <description>Name of the league they represent</description>
    <inlineHelpText>Name of the league they represent (e.g. WSL, NWSL)</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>