force-app/main/default/objects/Lead/fields/Revenue_Potential__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Potential__c</fullName>
    <label>Revenue Potential</label>
    <description>Estimated annual revenue value from this lead</description>
    <inlineHelpText>Estimated annual revenue potential for this lead</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>