force-app/main/default/objects/Lead/fields/Social_Profile__c.field-meta.xml
<CustomField>
    <fullName>Social_Profile__c</fullName>
    <label>Social Profile</label>
    <description>LinkedIn or Twitter profile URL for research</description>
    <inlineHelpText>LinkedIn or Twitter profile URL for this lead</inlineHelpText>
    <type>Url</type>
</CustomField>