force-app/main/default/objects/Lead/fields/Source_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign__c</fullName>
    <label>Source Campaign</label>
    <description>Marketing campaign that generated this lead</description>
    <inlineHelpText>The marketing campaign that generated this lead</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Source_Leads</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>