force-app/main/default/objects/Lead/fields/Sport_Type__c.field-meta.xml
<CustomField>
    <fullName>Sport_Type__c</fullName>
    <label>Sport Type</label>
    <description>Primary sport interest for this lead</description>
    <inlineHelpText>Select the primary sport type this lead is interested in</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Multi-Sport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>