force-app/main/default/objects/Lead/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <label>Team Name</label>
    <description>Name of the team they represent</description>
    <inlineHelpText>Name of the team they represent (for team portal leads)</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>