force-app/main/default/objects/Lead/fields/Women_Sports_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Women_Sports_Advocate__c</fullName>
    <label>Women&apos;s Sports Advocate</label>
    <description>Indicates if this lead champions women&apos;s sports</description>
    <inlineHelpText>Check if this lead actively champions or advocates for women&apos;s sports</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>